[gd_scene load_steps=4 format=3 uid="uid://c6qj3u8pbf2cs"]

[ext_resource type="PackedScene" uid="uid://7oc6ospeau0o" path="res://scenes/plant_cell.tscn" id="1_usu7n"]
[ext_resource type="Texture2D" uid="uid://cer4y1dk8r5bj" path="res://art/plants/sunflower.jpg" id="2_r3jq1"]
[ext_resource type="Script" path="res://scenes/sun_flower.gd" id="3_ak20t"]

[node name="SunFlower" instance=ExtResource("1_usu7n")]
texture = ExtResource("2_r3jq1")
script = ExtResource("3_ak20t")
type = "sun_flower"
cost = 50
cooldown = 1

[node name="Timer" type="Timer" parent="." index="0"]
wait_time = 10.0

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="ready" from="Timer" to="." method="_on_timer_ready"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
